:bug: Bug: Disables vertical-align in .demographic-container. Fixes #150. (#151)

--- a/public/main.css
+++ b/public/main.css
@@ -1036,7 +1036,7 @@ span.national-bar-container-values {
 .demographic-container {
   width: 48%;
   display: inline-block;
-  vertical-align: top;
+  /*vertical-align: top;*/
   text-align: center;
   margin-top: 2em;
 }
